<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loging"
    android:background="@drawable/house_launch">
    <?xml version="1.0" encoding="utf-8"?>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="374dp"
        android:layout_height="57dp"
        android:layout_marginBottom="472dp"
        android:background="#A3D9A5"
        android:backgroundTint="@color/yellow"

        android:hint="@string/email"
        android:padding="12dp"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"

        app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="374dp"
            android:layout_height="53dp"
            android:background="#A3D9A5"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@color/yellow"
            android:padding="12dp"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.688" />


    <TextView
        android:id="@+id/signinTitle"
        android:layout_width="395dp"
        android:layout_height="121dp"
        android:layout_gravity="center"
        android:paddingBottom="12dp"
        android:text="@string/sign"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="276dp"
        android:layout_height="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/images" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="139dp"
            android:layout_height="73dp"
            android:layout_marginEnd="276dp"
            android:text="Email"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.412" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="552dp"
            android:text="Password-"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="268dp"
            android:layout_height="93dp"
            android:backgroundTint="#a76e04"
            android:text="@string/sign"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.874" />

</androidx.constraintlayout.widget.ConstraintLayout>